done tab and styles

--- a/3. Third task/source/sass/style.scss
+++ b/3. Third task/source/sass/style.scss
@@ -4,3 +4,8 @@
 @import "global.scss";
 @import "fonts.scss";
 @import "blocks/introduction.scss";
+@import "blocks/main.scss";
+@import "blocks/toggle.scss";
+@import "blocks/content.scss";
+@import "blocks/registration.scss";
+@import "blocks/popup-scroll.scss";
