--- a/3. Third task/source/sass/variables.scss
+++ b/3. Third task/source/sass/variables.scss
@@ -9,8 +9,8 @@ $semibold: 600;
 $bold: 700;
 // font-size && line-height
 // desktop
-$font-size-desktop: 17px;
-$line-height-desktop: 26px;
+$font-size-desktop: 17;
+$line-height-desktop: 26;
 // color
 $text-color: #1c2e36;
 $placeholder-color: #c2c2c2;
