--- a/3. Third task/source/sass/blocks/introduction.scss
+++ b/3. Third task/source/sass/blocks/introduction.scss
@@ -1,4 +1,31 @@
 .introduction {
+  @include flex;
   min-height: 324px;
   background-color: $header-bg-color;
+  border-bottom: 1px solid #e2e2e2;
 }
+
+.introduction__wrapper {
+  width: 720px;
+  margin-left: auto;
+  padding-top: 53px;
+  padding-left: 140px;
+}
+
+.introduction__title {
+  @include font(44, 46, $medium);
+  width: 310px;
+  padding-bottom: 15px;
+  font-family: $geomanist;
+  color: $text-color;
+}
+
+.introduction__description {
+  width: 460px;
+}
+
+.introduction__image {
+  width: 50%;
+  height: auto;
+}
+
