--- a/3. Third task/source/sass/mixin.scss
+++ b/3. Third task/source/sass/mixin.scss
@@ -5,8 +5,8 @@
 }
 
 @mixin font($font-size, $line-height, $font-weight: $regular, $font-style: normal) {
-  font-size: $font-size + "px";
-  line-height: $line-height + "px";
+  font-size: $font-size + px;
+  line-height: $line-height + px;
   font-weight: $font-weight;
   font-style: $font-style;
 }
