done link and tab

--- a/3. Third task/source/index.pug
+++ b/3. Third task/source/index.pug
@@ -154,7 +154,8 @@ html(lang="en")
         img.popup-scroll__image(src="img/popup-image.jpg" width="109" height="80" alt="One World Observator")
 
         p.popup-scroll__description.title
-          | From $28
+          | From $
+          span#link-popup-scroll 28
           br
           span per person
 
