--- a/3. Third task/source/sass/style.scss
+++ b/3. Third task/source/sass/style.scss
@@ -9,3 +9,5 @@
 @import "blocks/content.scss";
 @import "blocks/registration.scss";
 @import "blocks/popup-scroll.scss";
+@import "blocks/popup-fail.scss";
+@import "blocks/popup-success.scss";
