--- a/3. Third task/source/sass/variables.scss
+++ b/3. Third task/source/sass/variables.scss
@@ -16,6 +16,7 @@ $text-color: #1c2e36;
 $placeholder-color: #c2c2c2;
 $header-bg-color: #f2f2f2;
 $form-bg-color: #0084ba;
+$fail-bg-color: #e26d5a;
 $text-white: white;
 $text-black: black;
 // @media
