--- a/3. Third task/source/index.pug
+++ b/3. Third task/source/index.pug
@@ -15,9 +15,6 @@ html(lang="en")
     link(rel="stylesheet" href="/resources/demos/style.css")
     script(src="https://code.jquery.com/jquery-1.12.4.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
-
-    //- link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
-    //- script(src="https://cdn.jsdelivr.net/npm/flatpickr")
     script
       // Picture element HTML5 shiv
       document.createElement("picture")
@@ -186,7 +183,7 @@ html(lang="en")
           h3.popup-success__subtitle.title One World Observatory Admission
           p.popup-success__description.popup-success__description--price.title 
             | from $
-            span 28
+            span#popup-start-price 28
             |  per person
 
       p.popup-success__description.title Text a link to your phone so we can notify you about the event
