--- a/3. Third task/source/sass/blocks/content.scss
+++ b/3. Third task/source/sass/blocks/content.scss
@@ -1,5 +1,6 @@
 .content {
-  width: 637px;
+  width: calc(637 * 100% / 1160);
+  max-width: 637px;
   padding-top: 26px;
   padding-left: 34px;
   padding-right: 42px;
@@ -20,7 +21,8 @@
 
 .content__wrapper {
   position: relative;
-  width: 554px;
+  width: calc(629 * 100% / 637);
+  max-width: 554px;
   margin: 0 auto 24px auto;
 }
 
