--- a/3. Third task/source/sass/blocks/introduction.scss
+++ b/3. Third task/source/sass/blocks/introduction.scss
@@ -6,7 +6,8 @@
 }
 
 .introduction__wrapper {
-  width: 720px;
+  width: 43.3%;
+  max-width: 720px;
   margin-left: auto;
   padding-top: 53px;
   padding-left: 140px;
@@ -14,14 +15,16 @@
 
 .introduction__title {
   @include font(44, 46, $medium);
-  width: 310px;
+  width: 53.5%;
+  max-width: 310px;
   padding-bottom: 15px;
   font-family: $geomanist;
   color: $text-color;
 }
 
 .introduction__description {
-  width: 460px;
+  width: 79.5%;
+  max-width: 460px;
 }
 
 .introduction__image {
