--- a/5. Fifth task/source/sass/blocks/blog.scss
+++ b/5. Fifth task/source/sass/blocks/blog.scss
@@ -1,8 +1,8 @@
 .blog {
   width: 100%;
   min-height: 1500px;
-  height: 100vh;
   padding-top: 50px;
+  padding-bottom: 100px;
   background-color: $blog-bg;
 }
 
@@ -22,8 +22,12 @@
   margin-bottom: 30px;
 }
 
+.blog__link {
+  @include link(black, none);
+}
+
 .blog__content {
-  @include flex;
+  @include flex(column, center);
   width: 100%;
   height: 100%;
   padding-top: 20px;
